--- a/Contents/Info/css/info.css
+++ b/Contents/Info/css/info.css
@@ -1,6 +1,9 @@
+body{
+  overflow: hidden;
+}
 .bmg{
 
-    height: 1158px;
+    height: 1600px;
     overflow-y: scroll;
 }
 
@@ -268,12 +271,13 @@ a.button:hover {
   padding:20px 10px;border-radius: 4px;
 }
 .panel-default>.panel-heading+.panel-collapse>.panel-body{
- background-color: #e6e6e6; 
+ background-color: #e6e6e6; font-size: 30px;
 }
 .panel-title {
-    font-size: 25px;
+    font-size: 35px;
 }
 .panel-group .panel{
   margin-bottom: 10px;
   border-radius: 4px;
+
 }
