--- a/css/Main.css
+++ b/css/Main.css
@@ -62,6 +62,7 @@ nav .nav-language button {
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 60%;
+	background-color: #dce7ed
 	
 }
 
@@ -335,7 +336,7 @@ a.button {
 	font-size: 20px;
 }
 #temp{
-	font-size: 25px;
+	font-size: 55px;
 	 font-weight: bold;
 }
 
@@ -347,11 +348,14 @@ a.button {
 .title{background-color: #FF6600;
   color: white;
   font-size: 35px;
-  width: 800px;
-  padding: 10px;
-  margin: 20px auto;
+  width: 900px;
+  padding: 30px;
+  margin: 10px auto;
   font-weight: bold;
   text-align: center;
  
 
+}
+iframe{
+	border:none;
 }
