--- a/css/Main.css
+++ b/css/Main.css
@@ -79,7 +79,7 @@ nav .nav-language button {
 
 .main-menu-matrix table button {
 	margin-bottom: 150px;
-	background-color:  #da662d;
+	background-color:  #FF6600;
 	width: 320px;
 	height: 330px;
 	border: none;
