--- a/Contents/Info/css/info.css
+++ b/Contents/Info/css/info.css
@@ -265,7 +265,7 @@ a.button:hover {
 }
 .question-box .answer{display: none;}
 .panel-default>.panel-heading{
-  background-color: #FF6600;
+  background-color: #da662e;
   color: white;
   font-size: 35px;
   padding:20px 10px;border-radius: 4px;
