--- a/css/Main.css
+++ b/css/Main.css
@@ -38,7 +38,7 @@ header .logo img {
 
 nav {
 	height: 60px;
-	background-color: #FF6600;
+	background-color: #da662e;
 }
 
 nav .nav-language {
@@ -79,7 +79,7 @@ nav .nav-language button {
 
 .main-menu-matrix table button {
 	margin-bottom: 90px;
-	background-color:  #FF6600;
+	background-color:  #da662e;
 	width: 330px;
 	height: 340px;
 	border: none;
@@ -346,7 +346,7 @@ a.button {
 	padding-left: 10px;
 	color: white;
 }
-.title{background-color: #FF6600;
+.title{background-color: #da662e;
   color: white;
   font-size: 35px;
   width: 900px;
@@ -356,7 +356,7 @@ a.button {
   text-align: center;
 }
 .title-home{
-background-color: #FF6600;
+background-color: #da662e;
   color: white;
   font-size: 41px;
   width: 1050px;
