--- a/Contents/Maps/css/map.css
+++ b/Contents/Maps/css/map.css
@@ -6,8 +6,7 @@
 .home{
     float: left;
     height: 57px;
-    padding-left: 30px;
-
+    padding-left: 10px;
 }
   .img-home {position: absolute;top: -60px;z-index: 99;height: 62px;cursor: pointer; cursor: hand;}
   .wrap{padding-top: 20px; height: 800px;}
@@ -166,7 +165,8 @@ p{
   padding: 20px 0;
 }
 .main-content {
-  height: 62.5%;
+  height: 1640px;
+  overflow: hidden;
 }
 .map-content ul{
   list-style-type: none;    height: 393px;
