--- a/Contents/Departments/css/eat.css
+++ b/Contents/Departments/css/eat.css
@@ -1,10 +1,18 @@
+.main-content{
+  height: auto;
+}
 .bmg{
-    height: 1158px;
+  width: 900px;
+  height: 1600px;
+  margin: 0 auto;
+  padding-top: 20px;
+  overflow-y: scroll;
+
 }
 .home{
     float: left;
     height: 57px;
-    padding-left: 30px;
+    padding-left: 10px;
 }
 .img-home {position: absolute;top: -60px;z-index: 99;height: 62px;cursor: pointer; cursor: hand;}
 .wrap{padding-top: 60px;}
@@ -259,4 +267,18 @@ li.even{background-color: #FCECE8;}
 p{
 
   margin: 0 0 0;
+}
+
+.department-box{
+  /*width: ;
+  height: 80px;*/
+  background-color: #da662e;
+      margin-bottom: 20px;
+    text-align: center;
+    font-size: 40px;
+}
+.department-box .department-title{
+  color: white;
+  
+  padding: 15px;
 }
