Faqs and Popup update

--- a/Contents/Info/css/info.css
+++ b/Contents/Info/css/info.css
@@ -221,7 +221,7 @@ a.button {
     font-size: 30px;
   
   /* button color */
-  background-color: #FF6600;
+  background-color: #b92c28;
   
   /* css3 implementation :) */
   /* rounded corner */
