--- a/css/Main.css
+++ b/css/Main.css
@@ -157,7 +157,38 @@ a.button {
 	border-bottom: 1px solid rgba(0,0,0,0.25);
 	position: relative;
 	cursor: pointer;
+	
+	/*top: -50px;
+	right: -30px;*/
 
+}
+a.search{
+	margin:10px auto 0 auto;
+	text-align:center;
+	display: block;
+	width:142px;
+	padding:  10px ;
+	color: #fff;
+	text-decoration: none;
+	font-weight: bold;
+	line-height: 1;
+	font-size: 30px;
+
+	/* button color */
+	background-color: #008000;
+
+	/* css3 implementation :) */
+	/* rounded corner */
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+
+	/* drop shadow */
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+
+	/* text shaow */
+	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+	border-bottom: 1px solid rgba(0,0,0,0.25);
 }
 
 
