--- a/css/Main.css
+++ b/css/Main.css
@@ -287,11 +287,18 @@ a.search{
 	font-weight: bold;
 	 font-size: 25px;
 }
+.dateTime{
+	float: right;
+    margin-top: 5px;
+    font-size: 35px;
+    color: #fff
+}
 #content_air,#content_date,#condition{
-	font-size: 20px;
+	
+	
 }
 #temp{
-	font-size: 55px;
+	font-size: 35px;
 	 font-weight: bold;
 }
 
